--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
         completions."
     </string>
     <string name="title_activity_gdps_add_people">GdpsAddPeopleActivity</string>
+    <string name="title_activity_ksxj">KsxjActivity</string>
 </resources>
