--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     </string>
     <string name="title_activity_gdps_add_people">GdpsAddPeopleActivity</string>
     <string name="title_activity_ksxj">KsxjActivity</string>
+    <string name="title_activity_xjyw_wwyt">XjywWwytActivity</string>
 </resources>
