--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_ksxj">KsxjActivity</string>
     <string name="title_activity_xjyw_wwyt">XjywWwytActivity</string>
+    <string name="title_activity_xjyw_ck">XjywCkActivity</string>
 </resources>
